tests/expectations/compiler/tuple/tuple_in_return_type.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372049]: A tuple type cannot contain a tuple.
    --> compiler-test:4:35
     |
   4 |     transition bar(a: u8) -> (u8, (u8, u8)) {
     |                                   ^^^^^^^^
Error [ETYC0372052]: A tuple expression cannot contain another tuple expression.
    --> compiler-test:5:20
     |
   5 |         return (a, (a + a, a * a));
     |                    ^^^^^^^^^^^^^^
Error [ETYC0372052]: A tuple expression cannot contain another tuple expression.
    --> compiler-test:5:20
     |
   5 |         return (a, (a + a, a * a));
     |                    ^^^^^^^^^^^^^^
"""]
